         or something like that. guys, send me a patch.
WISH: coloured pastebin
WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

TODO: exg-- patch
TODO: selection_beg/end should set screen, or so
	- urxvt did not compile without frills enabled
          (analysed by Matthew Rosewarne).

9.06 Sat Nov  8 17:47:18 CET 2008
	- NOTICE: this release updates terminfo/termcap.
        - updates libev to 3.48.
	- the aterm code now frees the as visual and image manager objects
          when a window was closed.
        - do not (wrongly) adjust the virtual line length inside
          scr_insdel_chars/ERASE (Miroslav Lichvar).
        - fix an issue where wide tab characters caused character shifts
          when part of them was deleted (tracked down by Miroslav Lichvar).
        - artificially enlargen the previous character at the end of a line
          when trying to output a character that doesn't fit. looks ugly, but
          makes copy&paste work.
	- remove bogus "setuid/setgid security issues" from rxvt.1.pod, they
          no longer apply.
        - the urgency hint is now cleared on both focus in and focus out.
        - cache urgency hint locally to avoid server rtt on every focus change.
	- perl 5.10 needs PERL_SYS_INIT3 on hppa.
	- ignore byte-order marks and do not treat them like combining characters.
        - fix build issue when CURSOR_BLINK is not defined (Emanuele Giaquinta).
        - do some µ-optimisations to the character fast path.
        - use a less cunning, but more robust algorithm to avoid one terminal
          monopolising the whole process by outputting a lot of text.
        - try to work around linux first breaking sched_yield and now breaking
          the only known workaround.
        - new option -icon to set _NET_WM_ICON (based on patch by Frank Schmitt).